# tradetrack

./: vercel.json
backend/: .env  Cargo.toml
backend/src/: db.rs  main.rs  polygon_checker.rs  solana_checker.rs
