[package]
name = "tradetrack-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
actix-cors = "0.6.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28", features = ["full"] }
mongodb = "2.5.0"
dotenv = "0.15.0"
anyhow = "1.0"
chrono = "0.4"
solana-client = "1.16"
solana-sdk = "1.16"
solana-transaction-status = "1.16"
web3 = "0.19" 